--- a/.github/workflows/clubhouse-release-e2e.yml
+++ b/.github/workflows/clubhouse-release-e2e.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         repository: farmersdog/clubhouse-workflow-action
-        ref: v0.1.0
+        ref: master
         path: action
     - run: ls -la ./action
     - uses: ./action
