change to branch until can figure out toolkit

--- a/.github/workflows/clubhouse-release-e2e.yml
+++ b/.github/workflows/clubhouse-release-e2e.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         repository: farmersdog/clubhouse-workflow-action
-        ref: master
+        ref: debug-action-toolkit
         path: action
     - run: ls -la ./action
     - uses: ./action
