--- a/.github/workflows/clubhouse-release-e2e.yml
+++ b/.github/workflows/clubhouse-release-e2e.yml
@@ -15,6 +15,6 @@ jobs:
     - run: ls -la ./action
     - uses: ./action
       with:
-        clubhouseToken: ${secrets.CLUBHOUSE_TOKEN}
+        clubhouseToken: ${{ secrets.CLUBHOUSE_TOKEN }}
         endStateName: Completed
         addReleaseInfo: true
