--- a/.github/workflows/clubhouse-release-e2e.yml
+++ b/.github/workflows/clubhouse-release-e2e.yml
@@ -7,7 +7,14 @@ jobs:
   test-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: farmersdog/clubhouse-workflow-action@master
+      - name: Test master
+        uses: farmersdog/clubhouse-workflow-action@master
+        with:
+          clubhouseToken: ${{ secrets.CLUBHOUSE_TOKEN }}
+          endStateName: Completed
+          addReleaseInfo: true
+      - name: Test latest v1 release
+        uses: farmersdog/clubhouse-workflow-action@v1
         with:
           clubhouseToken: ${{ secrets.CLUBHOUSE_TOKEN }}
           endStateName: Completed
