--- a/.github/workflows/pull-request-test.yml
+++ b/.github/workflows/pull-request-test.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   update-clubhouse:
     runs-on: ubuntu-latest
-    if: contains(github.event.pull_request.requested_teams.*.name, 'platform')
+    if: true
     steps:
       - uses: farmersdog/clubhouse-workflow-action@package-update
         with:
