--- a/.github/workflows/pull-request-test.yml
+++ b/.github/workflows/pull-request-test.yml
@@ -3,12 +3,15 @@ on:
   pull_request:
     types: ['review_requested']
 
+env:
+  QA_USERNAMES: ${{ secrets.QA_USERNAMES }}
+
 jobs:
   update-clubhouse:
     runs-on: ubuntu-latest
     steps:
       - uses: farmersdog/clubhouse-workflow-action@master
-        if: contains(secrets.QA_USERNAMES, github.event.pull_request.requested_reviewers[0].login)
+        if: contains(env.QA_USERNAMES, github.event.pull_request.requested_reviewers[0].login)
         with:
           clubhouseToken: ${{ secrets.CLUBHOUSE_TOKEN }}
-          endStateName: Ready for QA
+          endStateName: In Testing
