--- a/.github/workflows/clubhouse-release-e2e.yml
+++ b/.github/workflows/clubhouse-release-e2e.yml
@@ -11,11 +11,11 @@ jobs:
         uses: farmersdog/clubhouse-workflow-action@master
         with:
           clubhouseToken: ${{ secrets.CLUBHOUSE_TOKEN }}
-          endStateName: 'Deployed on Prod'
+          endStateName: 'Deployed on Production'
           addReleaseInfo: true
       - name: Test latest v1 release
         uses: farmersdog/clubhouse-workflow-action@v1
         with:
           clubhouseToken: ${{ secrets.CLUBHOUSE_TOKEN }}
-          endStateName: 'Deployed on Prod'
+          endStateName: 'Deployed on Production'
           addReleaseInfo: true
