--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Test master
-        uses: farmersdog/clubhouse-pr@master
+      - name: Test fixes branch
+        uses: farmersdog/clubhouse-pr@rfarine/ch43418/fixes
         with:
           ghToken: ${{ secrets.GITHUB_TOKEN }}
           chToken: ${{ secrets.CLUBHOUSE_TOKEN }}
