--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -3,6 +3,7 @@ name: PR Title Updater
 on:
   pull_request:
     ## Adding 'synchronized' here for testing purposes
+    ## Trying to trigger this again...?
     types: [ opened, synchronized ]
 
 jobs:
