--- a/.github/workflows/pr-update.yml
+++ b/.github/workflows/pr-update.yml
@@ -2,8 +2,7 @@ name: PR Title Updater
 
 on:
   pull_request:
-    ## Adding 'edited' here for testing purposes
-    types: [ opened, edited ]
+    types: [ opened ]
 
 jobs:
   update-pr-title:
@@ -12,8 +11,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Test fixes branch
-        ## TODO: Update to master
-        uses: farmersdog/clubhouse-pr@rfarine/ch43418/fixes
+        uses: farmersdog/clubhouse-pr@master
         with:
           ghToken: ${{ secrets.GITHUB_TOKEN }}
           chToken: ${{ secrets.CLUBHOUSE_TOKEN }}
