--- a/.github/workflows/pr-update.yml
+++ b/.github/workflows/pr-update.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Test fixes branch
+      - name: Test Clubhouse PR Action
         uses: farmersdog/clubhouse-pr@master
         with:
           ghToken: ${{ secrets.GITHUB_TOKEN }}
