--- a/.github/workflows/gh-pr-opened.yml
+++ b/.github/workflows/gh-pr-opened.yml
@@ -1,16 +1,16 @@
-name: PR Title Updater
+name: Clubhouse PR E2E Test
 
 on:
   pull_request:
-    types: [ opened ]
+    types: [ opened, reopened ]
 
 jobs:
-  update-pr-title:
+  update:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: Test Clubhouse PR Action
+      - name: Update PR
         uses: farmersdog/clubhouse-pr@master
         with:
           ghToken: ${{ secrets.GITHUB_TOKEN }}
